add email&sms reminder notifications configs

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,5 +19,7 @@ git+https://github.com/botswana-harvard/edc-navbar@develop#egg=edc-navbar
 git+https://github.com/botswana-harvard/edc-reference.git@develop#egg=edc-reference
 git+https://github.com/botswana-harvard/edc-search.git@develop#egg=edc_search
 git+https://github.com/botswana-harvard/edc-subject-dashboard.git@0.1.11#egg=edc-subject-dashboard
+git+https://github.com/botswana-harvard/edc-sms.git@develop#egg=edc_sms
 git+https://github.com/botswana-harvard/edc-visit-schedule.git@0.2.10#egg=edc-visit-schedule
 mysqlclient
+django_q
