--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,6 +8,7 @@ git+https://github.com/botswana-harvard/edc-constants.git@develop#egg=edc_consta
 git+https://github.com/botswana-harvard/edc-dashboard.git@develop#egg=edc_dashboard
 git+https://github.com/botswana-harvard/edc-device.git@develop#egg=edc_device
 git+https://github.com/botswana-harvard/edc-facility.git@develop#egg=edc-facility
+git+https://github.com/botswana-harvard/edc-form-validators.git@0.1.2#egg=edc-form-validators
 git+https://github.com/botswana-harvard/edc-identifier.git@develop#egg=edc-identifier
 git+https://github.com/botswana-harvard/edc-lab.git@develop#egg=edc-lab
 git+https://github.com/botswana-harvard/edc-label.git@develop#egg=edc-label
@@ -18,8 +19,9 @@ git+https://github.com/botswana-harvard/edc-model-wrapper.git@0.1.7#egg=edc-mode
 git+https://github.com/botswana-harvard/edc-navbar@develop#egg=edc-navbar
 git+https://github.com/botswana-harvard/edc-reference.git@develop#egg=edc-reference
 git+https://github.com/botswana-harvard/edc-search.git@develop#egg=edc_search
-git+https://github.com/botswana-harvard/edc-subject-dashboard.git@0.1.11#egg=edc-subject-dashboard
 git+https://github.com/botswana-harvard/edc-sms.git@develop#egg=edc_sms
+git+https://github.com/botswana-harvard/edc-subject-dashboard.git@0.1.11#egg=edc-subject-dashboard
 git+https://github.com/botswana-harvard/edc-visit-schedule.git@0.2.10#egg=edc-visit-schedule
+git+https://github.com/botswana-harvard/edc-identifier.git@0.2.11#egg=edc-identifier
 mysqlclient
 django_q
