--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ git+https://github.com/botswana-harvard/edc-constants.git@develop#egg=edc_consta
 git+https://github.com/botswana-harvard/edc-dashboard.git@develop#egg=edc_dashboard
 git+https://github.com/botswana-harvard/edc-device.git@develop#egg=edc_device
 git+https://github.com/botswana-harvard/edc-facility.git@develop#egg=edc-facility
+git+https://github.com/botswana-harvard/edc-form-validators.git@0.1.2#egg=edc-form-validators
 git+https://github.com/botswana-harvard/edc-identifier.git@develop#egg=edc-identifier
 git+https://github.com/botswana-harvard/edc-lab.git@develop#egg=edc-lab
 git+https://github.com/botswana-harvard/edc-label.git@develop#egg=edc-label
